--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=18.18.1"
+  },
   "scripts": {
     "build": "env-cmd -f ./environments/.env.production nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
