--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "scripts": {
     "build": "env-cmd -f ./environments/.env.production nest build",
+    "build:render": "env-cmd -f /etc/secrets/<filename> nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "env-cmd -f ./environments/.env.development nest start",
     "start:dev": "env-cmd -f ./environments/.env.development nest start --builder swc --typeCheck --watch",
     "start:debug": "env-cmd -f ./environments/.env.development nest start --builder swc --typeCheck --debug --watch",
     "start:prod": "env-cmd -f ./environments/.env.production node dist/main",
+    "start:render": "env-cmd -f /etc/secrets/<filename> node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "env-cmd -f ./environments/.env.development jest",
     "test:watch": "env-cmd -f ./environments/.env.development jest --watch",
